chore:fix bugs